chore: Fix jumbo nav scrollbars

--- a/src/_styles/_jumbonav.css
+++ b/src/_styles/_jumbonav.css
@@ -24,6 +24,11 @@
 
 #jumbo-nav.jumbo-nav__open {
     display: block;
+    overflow-y: scroll;
+    height: calc(100vh - 4.25rem);
+    position: absolute;
+    top: 4.25rem;
+    scrollbar-width: thin;
 }
 
 #jumbo-nav nav {
